tests/test_input_files/bad/test_bad_array_12.punkt
main {
	const A = alloc [int] (1, 2).
}
